# depp-project

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile-API  Dockerfile-Testing  Python3Dockerfile  README.md  build.rs  docker-compose.yml  example.env  nginx.conf  requests.http
.github/workflows/: dockerimage.yml
Docker-Files/: Dockerfile-API  Dockerfile-Assign-Mngr-Debug  Dockerfile-Assign-Mngr-Release  Dockerfile-DB-Edit  Dockerfile-Testing  UbuntuDockerfile
Schriftstuecke/: test.tex
Schriftstuecke/Alt/: test.tex
Schriftstuecke/Alt/Latex/: test.tex
Schriftstuecke/Neu/: test.tex
Schriftstuecke/Neu/Latex/: test.tex
api/: Cargo.toml  README.md
api/openapi/: .dockerignore  doc.openapi.yml  docker-compose.yml  nginx.conf
api/src/: api.rs  assignment.rs  base64.rs  db_query.rs  handler.rs  handlers.rs  main.rs  routes.rs  rpc_conf.rs  state.rs
api/src/handlers/: auth.rs  error.rs  get.rs  post.rs
assign-mngr/: Cargo.toml  README.md  docker-compose.yml  package.json
assign-mngr/src/: assignments.rs  auth.rs  auth_middleware.rs  config.rs  db.rs  error.rs  exercises.rs  handler.rs  main.rs  template.rs
assign-mngr/src/assignments/: edit.rs  file.rs  get.rs  new.rs
assign-mngr/static/: bootstrap.min.css  editor.css  form.js  monaco-editor.js  monaco-require.js  style.css
assign-mngr/templates/: assignment_form.html  assignment_view.html  assignments_list.html  base.html  custom-script-small-desc.html  error.html  exercise_form.html  exercise_list.html  file_upload.html  index.html  login.html  monaco_editor.html  solution-small-desc.html
db-edit/: Cargo.toml  docker-compose.yml
db-edit/src/: assignments.rs  auth.rs  auth_middleware.rs  config.rs  db.rs  error.rs  exercises.rs  handler.rs  main.rs  template.rs
db-edit/src/assignments/: edit.rs  file.rs  get.rs  new.rs
db-edit/static/: exercise.js
db-edit/templates/: assignment_form.html  assignment_view.html  assignments_list.html  assignments_views.html  bad_request_error.html  error.html  exercise_form.html  exercise_list.html  head.html  index.html  login.html  server_error.html  top_bar.html
db-lib/: Cargo.toml  README.md
db-lib/migrations/: V1___schema.sql  V2____assignment_exercise_view.sql  V3____cleanup.sql  V4___alter_assignments_table.sql
db-lib/src/: lib.rs
deploy/: auth.inf.fh-dortmund.de-rootCA.pem  compose.env  docker-compose.yml
deploy/nginx/: nginx.conf
docs/: api.openapi.yml  nginx.conf
examples/: akademisches_jahrbuch.txt  assignments.toml  pk7-Aufgabe1.sh  shit  submission.json  task1_helloworld.bat  task2_reverse.sh  task3_fib.py  task4_directories.bat  task5-test.txt  task5_regex.ps1  test-data.json
grpc-api/: Cargo.toml  README.md  build.rs
grpc-api/proto/: deep_project.proto
grpc-api/src/: lib.rs
proto/: deep_project.proto
src/: Dockerfile  api.rs  base64.rs  config.rs  crash_test.rs  exec.rs  fs_util.rs  handler.rs  main.rs  script.rs  state.rs  util.rs
testing/: Cargo.toml  README.md
testing/example-scripts/: assignments.toml  task4_directories.bat
testing/examples/: assignments.toml  pk7-Aufgabe1.sh  task1_helloworld.sh
testing/src/: checker.rs  client.rs  config.rs  crash_test.rs  docker.rs  docker_api.rs  error.rs  fs_util.rs  grpc_tester.rs  main.rs  script.rs  sema_wrap.rs  server.rs
