[package]
authors = ["Dominic <email@domi-me.de>"]
edition = "2018"
name = "deep-api"
version = "0.1.0"
[dependencies]
actix-web = "2.0.0-alpha.5"
base64 = "0.11.0"
env_logger = "0.7.1"
err-derive = "0.2.1"
failure = "0.1.6"
log = "0.4.8"
serde = "1.0.102"
serde_json = "1.0.41"
tempfile = "3.1.0"
toml = "0.5.5"
structopt = "0.3.4"
derive_more = "0.99.2"
actix-cors = "0.2.0-alpha.3"
actix-rt = "1.0.0"
walkdir = "2.2.9"
tokio = { version = "0.2.4", features = ["full"] }
futures = "0.3.1"
dashmap = "2.1.0"
fs_extra = "1.1.0"
[dependencies.uuid]
features = ["serde", "v4"]
version = "0.8.1"
