[package]
name = "api"
authors = ["Dominic <email@domi-me.de>"]
edition = "2018"
version = "0.3.0"


[dependencies]
tonic = "0.1.0"
bytes = "0.5.3"
prost = "0.6.0"
tokio = { version = "0.2.13", features = ["full"] }
futures = "0.3.1"

actix-web = "2.0.0"
actix-cors = "0.2.0"
actix-rt = "1.0.0"
actix-web-httpauth = "0.4.0"

base64 = "0.11.0"
env_logger = "0.7.1"
err-derive = "0.2.1"
failure = "0.1.6"
log = "0.4.8"
serde = "1.0.104"
serde_json = "1.0.44"
derive_more = "0.99.2"
dashmap = "3.0.7"
grpc-api = {path = "../grpc-api"}
db-lib = {path = "../db-lib"}
envy = "0.4.1"
sha2 = "0.8.1"
toml = "0.5.5"
hex-serde = "0.1.0"
structopt = "0.3.7"
deadpool-postgres = "0.5.5"
tokio-postgres = { version="0.5.2" , features=["with-uuid-0_8"] }
tokio-pg-mapper = "0.1.5"
tokio-pg-mapper-derive = "0.1.5"
[dependencies.url]
version = "2.1.1"
features = ["serde"]
[dependencies.uuid]
features = ["serde", "v4"]
version = "0.8"
