[package]
name = "db-lib"
version = "0.1.0"
authors = ["DomincWrege <dominic.wrege001@stud.fh-dortmund.de>"]
edition = "2018"

[dependencies]
refinery = { version = "0.2.0", features=["tokio-postgres"]}
deadpool-postgres = "0.5.5"
tokio-postgres = { version="0.5.3" , features=["with-uuid-0_8"] }
tokio = "0.2.13"
derive_more = "0.99.3"
err-derive = "0.2.3"
tokio-pg-mapper = "0.1.5"
postgres-types =  { version="0.1.0", features=["derive"] }
envy = "0.4.1"
serde = "1.0.104"
refinery-migrations = "0.2.2"
log = "0.4.8"