[package]
name = "grpc-api"
version = "0.1.0"
authors = ["DomincWrege <dominic.wrege001@stud.fh-dortmund.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.1.0"
bytes = "0.5.3"
prost = "0.6.0"
serde = { version = "1.0.104", features = ["derive"] }
[dependencies.uuid]
features = ["serde", "v4"]
version = "0.8.1"

[build-dependencies]
tonic-build = "0.1.0"
