[package]
name = "grpc-api"
version = "0.1.0"
authors = ["DomincWrege <dominic.wrege001@stud.fh-dortmund.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.2.1", features = ["transport", "tls"] }
bytes = "0.5.6"
prost = "0.6.1"
serde = { version = "1.0.114", features = ["derive"] }
tokio-postgres = "0.5.5"
postgres-types =  { version = "0.1.2", features = ["derive"] }
[dependencies.uuid]
features = ["serde", "v4"]
version = "0.8.1"
[build-dependencies]
tonic-build = "0.2.0"
