[package]
name = "testing"
version = "0.3.0"
authors = ["Dominic <email@domi-me.de>"]
edition = "2018"

[dependencies]
tonic = { version = "0.1.0", features = ["transport", "tls"] }
bytes = "0.5.3"
prost = "0.6.0"
tokio = { version = "0.2.13", features = ["full"] }
err-derive = "0.2.1"
failure = "0.1.6"
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
tempfile = "3.1.0"
derive_more = "0.99.2"
futures = "0.3.1"
async-stream = "0.2.0"
async-trait = "0.1.22"
prost-types = "0.6.0"
base64 = "0.11.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
grpc-api = {path = "../grpc-api"}
env_logger = "0.7.1"
envy = "0.4.1"
path-slash = "0.1.1"
regex = "1.3"
bollard = "0.4.0"
zip = "0.5.5"

