[package]
name = "testing"
version = "0.3.0"
authors = ["Dominic <email@domi-me.de>"]
edition = "2018"

[dependencies]
tonic = { version = "0.2.1", features = ["transport", "tls"] }
bytes = "0.5.5"
prost = "0.6.1"
tokio = { version = "0.2.21", features = ["full"] }
failure = "0.1.8"
log = "0.4.8"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
tempfile = "3.1.0"
derive_more = "0.99.9"
futures = "0.3.5"
async-stream = "0.2.1"
async-trait = "0.1.36"
prost-types = "0.6.1"
base64 = "0.12.3"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
grpc-api = {path = "../grpc-api"}
env_logger = "0.7.1"
envy = "0.4.1"
path-slash = "0.1.3"
regex = "1.3.9"
bollard = "0.7.1"
zip = "0.5.6"
compare = "0.1.0"

